--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <groupId>kware.grocery</groupId>
   <artifactId>grocery-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -22,65 +22,65 @@
   </properties>
 
   <dependencies>
-          <!-- 
-            DEPENDENCY: Core dependency for any Spring Boot web application (includes MVC, Tomcat, etc.). 
-            This is required to run the generated server interfaces and controllers.
-        -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
-        
-        <!-- 
-            DEPENDENCY: Required for configuring and launching the Spring Boot application. 
-        -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
+    <!--
+      DEPENDENCY: Core dependency for any Spring Boot web application (includes MVC, Tomcat, etc.).
+      This is required to run the generated server interfaces and controllers.
+  -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring-boot.version}</version>
+    </dependency>
 
-        <!-- 
-            DEPENDENCY: For validating request body constraints (e.g., @NotNull) 
-        -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
+    <!--
+        DEPENDENCY: Required for configuring and launching the Spring Boot application.
+    -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+      <version>${spring-boot.version}</version>
+    </dependency>
 
-        <!-- 
-            DEPENDENCY: The generated code itself depends on the javax/jakarta validation API
-        -->
-        <dependency>
-            <groupId>jakarta.validation</groupId>
-            <artifactId>jakarta.validation-api</artifactId>
-            <version>3.0.2</version>
-        </dependency>
+    <!--
+        DEPENDENCY: For validating request body constraints (e.g., @NotNull)
+    -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <version>${spring-boot.version}</version>
+    </dependency>
 
-        <dependency>
-          <groupId>io.swagger.core.v3</groupId>
-          <artifactId>swagger-annotations</artifactId>
-          <version>2.2.20</version>
-        </dependency>
+    <!--
+        DEPENDENCY: The generated code itself depends on the javax/jakarta validation API
+    -->
+    <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <version>3.0.2</version>
+    </dependency>
 
-        <dependency>
-          <groupId>org.openapitools</groupId>
-          <artifactId>jackson-databind-nullable</artifactId>
-          <version>0.2.6</version> <!-- Or the latest stable version -->
-        </dependency>
+    <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>2.2.20</version>
+    </dependency>
 
-        <dependency>
-          <groupId>org.projectlombok</groupId>
-          <artifactId>lombok</artifactId>
-          <version>${lombok.version}</version>
-          <scope>provided</scope>
-        </dependency>
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+      <version>0.2.6</version> <!-- Or the latest stable version -->
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
-  <plugins>
+    <plugins>
       <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
@@ -104,13 +104,16 @@
                 <!-- <generateSupportingFiles>false</generateSupportingFiles> -->
                 <useSpringBoot3>true</useSpringBoot3>
                 <lombok>true</lombok>
+                <additionalModelTypeAnnotations>@lombok.Builder
+                </additionalModelTypeAnnotations>
                 <useSwaggerAnnotations>false</useSwaggerAnnotations>
+                <useTags>true</useTags>
               </configOptions>
             </configuration>
           </execution>
         </executions>
       </plugin>
-      </plugins>
+    </plugins>
   </build>
 
 </project>
